<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.admonunidadeseconomicas.Empresas_Mapa" >
	 <item
        android:id="@+id/listaEmpresas"
        android:title="Lista"
        app:showAsAction="always"/>
	
	<item android:id="@+id/menuAppSistema" android:title="@string/menuAppInformacionSistema" app:showAsAction="never"></item>
    <item android:id="@+id/menuAppCerrarSesion" android:title="@string/menuAppCerrarSesion" app:showAsAction="never"></item>
    <item android:id="@+id/menuAppEstadoServidor" android:title="@string/menuAppEstadoServidor" app:showAsAction="never"></item>
    <item android:id="@+id/menuAppSalir" android:title="@string/menuAppSalir" app:showAsAction="never"></item>
    
   

</menu>
