<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg2"
    tools:context="com.example.admonunidadeseconomicas.SubSectores_Cambios" >

    <TextView
        android:id="@+id/subsectoresCambiosTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <Spinner
        android:id="@+id/subsectoresCambiosListado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/subsectoresCambiosTitulo" 
        android:background="@drawable/bgspinner"
        android:popupBackground="#000000"/>

    <EditText
        android:id="@+id/subsectoresCambiosCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subsectoresCambiosListado"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/subsectoresCambiosListado"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/subsectoresAltaCodigo" />

    <Button
        android:id="@+id/subsectoresCambiosGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/subsectoresCambiosNombre"
        android:gravity="center_horizontal"
        android:text="@string/subsectoresAltaGuardar" />

    <Button
        android:id="@+id/subsectoresCambiosCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/subsectoresCambiosGuardar"
        android:text="@string/subsectoresAltasCancelar" />

    <EditText
        android:id="@+id/subsectoresCambiosNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/subsectoresCambiosCodigo"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/subsectoresAltaNombre" >

        <requestFocus />
    </EditText>

</RelativeLayout>
